--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>MOVIE LIBRARY</h1>
     <div class="container">
         <ul id="lib"></ul>
         <div class="add_btn"><button>+ Add Movie</button></div>
